<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@mipmap/top_cover" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/none_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/shape_ffffff_r16"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="28dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="No Clues"
                    android:textColor="@color/tc_30313c"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="To initiate the data analysis process, begin by entering your initial blood pressure measurements"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btn_add"
                    android:layout_width="224dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="24dp"
                    android:background="@mipmap/btn"
                    android:text="Enter Record"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/record_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@drawable/shape_ffffff_r16"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/btn_last"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/icon_pre"
                            android:visibility="gone"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_record_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="Latest Record"
                            android:textColor="@color/tc_30313c"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/btn_next"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/icon_pro"
                            android:visibility="gone"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/shape_f4f4ff_r16"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:paddingTop="12dp"
                            android:paddingBottom="12dp">

                            <TextView
                                android:id="@+id/tv_systolic"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:gravity="center"
                                android:text="0"
                                android:textColor="@color/tc_4a4f75"
                                android:textSize="26sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_systolic_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="16dp"
                                android:text="@string/systolic"
                                android:textColor="@color/tc_989cb5"
                                android:textSize="14sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:text="@string/_mmhg_"
                                android:textColor="@color/tc_989cb5"
                                android:textSize="12sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="14dp"
                            android:layout_marginEnd="14dp"
                            android:layout_weight="1"
                            android:background="@drawable/shape_f4f4ff_r16"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:paddingTop="12dp"
                            android:paddingBottom="12dp">


                            <TextView
                                android:id="@+id/tv_diastolic"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:gravity="center"
                                android:text="0"
                                android:textColor="@color/tc_4a4f75"
                                android:textSize="26sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_diastolic_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="16dp"
                                android:text="@string/diastolic"
                                android:textColor="@color/tc_989cb5"
                                android:textSize="14sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:text="@string/_mmhg_"
                                android:textColor="@color/tc_989cb5"
                                android:textSize="12sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/shape_f4f4ff_r16"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:paddingTop="12dp"
                            android:paddingBottom="12dp">

                            <TextView
                                android:id="@+id/tv_pulse"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:gravity="center"
                                android:text="0"
                                android:textColor="@color/tc_4a4f75"
                                android:textSize="26sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_pulse_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="16dp"
                                android:text="@string/pulse"
                                android:textColor="@color/tc_989cb5"
                                android:textSize="14sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:text="@string/_bpm_"
                                android:textColor="@color/tc_989cb5"
                                android:textSize="12sp" />

                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/btn_add2"
                    android:layout_width="224dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="24dp"
                    android:background="@mipmap/btn"
                    android:text="Record Now"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/btn_history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="54dp"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="Click this link to access the history"
                    android:textColor="#8F8FA3"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>